# digital-image-processing

./: .gitignore  README.md  pyproject.toml
exercise_1/: .gitignore  pyproject.toml  requirements.txt
exercise_1/src/: demo.py  hist_modif.py  hist_utils.py
exercise_1/tests/: test_apply_hist_modification_transform.py  test_calculate_hist_of_img.py  test_perform_hist_modification.py
exercise_2/: .gitignore
exercise_2/src/: circ_hough.py  demo.py  fir_conv.py  log_edge.py  sobel_edge.py
exercise_2/tests/: test_fir_conv.py  test_hough.py  test_log_edge.py  test_sobel.py
exercise_3/: requirements.txt
exercise_3/src/: demo1.py  demo2.py  demo3a.py  demo3b.py  demo3c.py  image_to_graph.py  n_cuts.py  spectral_clustering.py
exercise_3/tests/: test_image_to_graph.py  test_n_cuts.py  test_spectral_clustering.py
src/: __init__.py
src/part1/: demo.py  hist_modif.py  hist_utils.py
src/part2/: circ_hough.py  demo.py  fir_conv.py  log_edge.py  sobel_edge.py
src/part3/: demo1.py  demo2.py  demo3a.py  demo3b.py  demo3c.py  image_to_graph.py  n_cuts.py  spectral_clustering.py
src/utils/: paths.py
tests/: conftest.py
tests/part1/tests/: test_apply_hist_modification_transform.py  test_calculate_hist_of_img.py  test_perform_hist_modification.py
tests/part2/tests/: test_fir_conv.py  test_hough.py  test_log_edge.py  test_sobel.py
tests/part3/tests/: test_image_to_graph.py  test_n_cuts.py  test_spectral_clustering.py
